# stockinator

./: .firebaserc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTION.md  CONTRIBUTORS.md  README.md  package-lock.json
.github/: config.yml
.github/ISSUE_TEMPLATE/: bug.md  documentation.md  feature.md  proposal.md
.github/workflows/: master_stockinator.yml
Stockinator/: Database.db
backend/: pyproject.toml
backend/fastAPI/: fastAPI.py  requirements.txt
backend/robinhood/: robinhood.py
backend/stock-data/: infosample.json  main.py  requirements.txt
frontend/: .eslintcache  .gitignore  display.js  index.html  main.js  package-lock.json  package.json  stockdata.js
frontend/css/: style.css
frontend/src/js/: Stockdata.js  Title.js  index.js
functions/: index.js
mobile/: .gitignore  Stockinator.sln
mobile/Stockinator/: Stockinator.sln
mobile/Stockinator/Stockinator/Stockinator/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Stockinator.csproj
mobile/Stockinator/Stockinator/Stockinator.Android/: MainActivity.cs  Stockinator.Android.csproj
mobile/Stockinator/Stockinator/Stockinator.Android/Properties/: AndroidManifest.xml  AssemblyInfo.cs
mobile/Stockinator/Stockinator/Stockinator.iOS/: AppDelegate.cs  Info.plist  Main.cs  Stockinator.iOS.csproj
mobile/mobile/: MainPage.xaml
mobile/mobile.Android/: MainActivity.cs  mobile.Android.csproj
mobile/mobile.Android/Properties/: AndroidManifest.xml
mobile/mobile.Android/Resources/: Resource.designer.cs
mobile/mobile.iOS/: Info.plist  mobile.iOS.csproj
(+8 files in other folders)
