[tool.poetry]
name = "stockinator"
version = "0.2.0"
description = "stockinator - a stock analysis app"
authors = ["Ricardo Prins"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
yfinance = "^0.1.55"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
